syntax = "proto3";

import "google/api/annotations.proto";
import "validate/validate.proto";

package api.notice.v1;

option go_package = "github.com/Ccheers/wxapp-notice/app/backend/api/notice/v1;v1";
option java_multiple_files = true;
option java_package = "api.notice.v1";

service Notice {
  rpc SubscribeNotice (SubscribeNoticeRequest) returns (SubscribeNoticeReply) {
    option (google.api.http) = {
      post: "/notice/v1/sub",
      body: "*"
    };
  };
  rpc CheckSubscribeStatus (CheckSubscribeStatusRequest) returns (CheckSubscribeStatusReply) {
    option (google.api.http) = {
      post: "/notice/v1/check",
      body: "*"
    };
  };
}

message SubscribeNoticeRequest {
  string openid = 1 [(validate.rules).string = {min_len:1}];
}
message SubscribeNoticeReply {
  string code = 1;
  string msg = 2;
}

message CheckSubscribeStatusRequest {
  string openid = 1 [(validate.rules).string = {min_len:1}];
}
message CheckSubscribeStatusReply {
  bool subscribed = 1;
  int64 code = 2;
  string msg = 3;
}